tooling/nargo_cli/tests/snapshots/execution_failure/invalid_comptime_bits_decomposition/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Field failed to decompose into specified 1 limbs
   ┌─ std/field/mod.nr:64:20
   │
64 │         let bits = __to_be_bits(self);
   │                    ------------------ Assertion failed
   │
   = Call stack:
     1. src/main.nr:1:4
     2. src/main.nr:4:5
     3. std/field/mod.nr:64:20

Error interpreting main function
